tests/cmd_entrance_bad.svx
; pos=fail warn=1 error=1
*fix 1 reference 1 0 0
*entrance
*entrance 2
